--- a/CalculatorProject.vcxproj
+++ b/CalculatorProject.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClInclude Include="RPNCalculator.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="RPNCalculator.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
